Project section work Fix contact list breaking on small screens

--- a/assets/css/intro.scss
+++ b/assets/css/intro.scss
@@ -27,7 +27,6 @@
 
 		nav {
 			margin-top: 40px;
-			margin-right: -15px;
 		}
 
 		h2 {
@@ -86,7 +85,7 @@ nav {
 
 	li {
 		display: inline-block;
-		margin-right: 45px;
+		margin-right: 35px;
 		&:last-of-type {
 			margin-right: 0;
 		}
