--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -26,6 +26,10 @@ li,td,figcaption,p {
 	font-family: futura-pt, arial, sans-serif;
 }
 
+figure {
+	margin: 0 40px;
+}
+
 section {
 	text-align: center;
 	margin-bottom: 50px;
@@ -33,6 +37,8 @@ section {
 
 h3 {
 	letter-spacing: 2px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 body>main h2 {
@@ -97,7 +103,7 @@ ul.list {
 	}
 }
 
-nav ul {
+ul {
 	margin: 0;
 	padding: 0;
 }
@@ -116,6 +122,8 @@ ins {
 		max-width: 600px;
 
 		margin-top: 50px;
+		margin-left: 3vw;
+		margin-right: 3vw;
 		line-height: 22px;
 		flex: 1;
 		text-align: left;
